feat(service): refactor DispatchService to use DTOs and improve status handling